Tue May 14 14:50:34 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-*.c: Remove all debug print statements, #76085

Mon May 13 17:05:22 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-font.c (load_cursor): s/.gnome/.gnome2/g

2002-05-12  Anders Carlsson  <andersca@gnu.org>

	* gnome-settings-xsettings.c:
	Watch the dnd threshold xsetting.
	
2002-04-30  Kjartan Maraas  <kmaraas@gnome.org>

	* factory.c: Add calls to bindtext* for i18n.
	* Makefile.am: Add -DGNOMELOCALEDIR="\".....\""
	* gnome-settings-font.c: Mark strings and add #includes.
	* gnome-settings-screensaver.c: Same
	* gnome-settings-sound.c: Same.
	* gnome-settings-xsettings.c: Same.
	* gnome-settings-wm.c: Fix a warning.
	
2002-04-24  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
	  max speed is in pixels per _event_ not relative to time.  double
	  check that we don't set 0.

2002-04-24  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c
	(gnome_settings_accessibility_keyboard_init) : we're only interested
	  in control changes.
	(set_gconf_from_server) : set both XkbAccessXKeysMask|XkbAccessXFeedbackMask
	  when we enable accessX, and fix typo.

2002-04-23  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c (get_xkb_desc_rec) :
	  suppress warning.

2002-04-17  Rachel Hestilow  <hestilow@ximian.com>

	* GNOME_SettingsDaemon.server.in: s/gnome2/gnome

Tue Apr 16 17:09:02 2002  Jonathan Blandford  <jrb@redhat.com>

	* factory.c (main): Patch from Akira Tagoh <tagoh@gnome-db.org> to
	change the restart command from gnome2-settings-daemon to
	gnome-settings-daemon.

2002-04-12  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
	  Doh! We need to clear the flags if they are disabled.

2002-04-11  jacob berkman  <jacob@ximian.com>

	* gnome-settings-accessibility-keyboard.c: only do xkb calls if