@@ -44,6 +44,7 @@
 #include "gnome-settings-wm.h"
 #include "gnome-settings-accessibility-keyboard.h"
 #include "gnome-settings-screensaver.h"
+#include "gnome-settings-default-editor.h"
 
 #include "GNOME_SettingsDaemon.h"
 
@@ -237,6 +238,7 @@ gnome_settings_daemon_new (void)
   gnome_settings_wm_init (client);
   gnome_settings_accessibility_keyboard_init (client);
   gnome_settings_screensaver_init (client);
+  gnome_settings_default_editor_init (client);
 
   for (list = directories; list; list = list->next)
     {
@@ -269,11 +271,13 @@ gnome_settings_daemon_new (void)
   gnome_settings_font_load (client);
   gnome_settings_xsettings_load (client);
   gnome_settings_mouse_load (client);
+  gnome_settings_keyboard_load (client);
   gnome_settings_sound_load (client);
   gnome_settings_background_load (client);
   gnome_settings_wm_load (client);
   gnome_settings_accessibility_keyboard_load (client);
   gnome_settings_screensaver_load (client);
-  
+  gnome_settings_default_editor_load (client);
+
   return G_OBJECT (daemon);
 }
